--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,9 @@ include_directories("${CMAKE_SOURCE_DIR}")
 include_directories(third-party/cutlass/tools/util/include)
 include_directories(third-party/cutlass/include)
 include_directories(kernels/include)
+include_directories(kernels/device)
+include_directories(kernels/kernel)
+include_directories(kernels/reference/device)
 
 get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
 foreach(dir ${dirs})
