--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,10 @@ set(CMAKE_MESSAGE_LOG_LEVEL ${_saved_CMAKE_MESSAGE_LOG_LEVEL})
 include_directories("${CMAKE_SOURCE_DIR}")
 include_directories(third-party/cutlass/tools/util/include)
 include_directories(third-party/cutlass/include)
-include_directories(kernels/include)
+include_directories(kernels/device)
+include_directories(kernels/kernel)
+include_directories(kernels/thread)
+include_directories(kernels/threadblock)
 
 get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
 foreach(dir ${dirs})
